(chore): editor improvement

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -11,3 +11,9 @@
 body {
   @apply bg-dark text-primary overflow-hidden;
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
