--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -18,3 +18,7 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+.steps-gradient {
+  background: linear-gradient(180deg, transparent, #23252c 10%, #23252c 90%, transparent);
+}
